--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -1,15 +1,27 @@
-<mat-sidenav-container class="col-md-10 offset-md-1">
+<mat-sidenav-container class="col-md-10 offset-md-1 mode-down">
     <mat-sidenav
     #sidenav
     mode="side"
     opened
     [fixedInViewport]="true"
-    [fixedTopGap]="topGap"
+    [fixedTopGap]="210"
     class="col-md-2 side-nav"
+  
     >
-    <button class="btn-side-navbar col-md-12" (click)="scroll('inputs')">Set inputs</button>
-    <button class="btn-side-navbar col-md-12" (click)="scroll('findKey')">Find decryption key</button>
-    <button class="btn-side-navbar col-md-12" (click)="scroll('compareBigrams')">Compare bigrams frequency</button>
+
+  <ol >
+    <li  class="btn-side-navbar col-md-12"  (click)="scroll(menu, i)"
+        *ngFor="let menu of sideMenu, let i = index"
+        [class.active]="selectedIndex === i" >
+      <a>{{ menu.title }}</a>
+    </li>
+  </ol>
+
+  <!-- <ol class="number-circle-list number-circle-list--primary-color">
+    <li class="number-circle-list--list-item">Ordered list - first list item</li>
+    <li class="number-circle-list--list-item">Ordered list - second list item</li>
+    <li class="number-circle-list--list-item">Ordered list - third list item</li>
+</ol> -->
     </mat-sidenav>
     <mat-sidenav-content class="col-md-10">
       <ng-content>
