--- a/src/app/components/side-navbar/side-navbar.component.css
+++ b/src/app/components/side-navbar/side-navbar.component.css
@@ -1,21 +1,67 @@
 .btn-side-navbar {
-    background-color: #fefefe;
-    transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
-    display: block;
-    position: relative;
-    padding: 16px;
-    border-radius: 4px;
-    margin-bottom: 15px;
-    font-size: smaller;
+  background-color: #fefefe;
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  position: relative;
+  padding: 16px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+  font-size: smaller;
 }
 
 .mat-drawer-container {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .side-nav {
-    background-color: transparent;
-    box-shadow: none;
-    border: none;
-    padding-left: 0;
+  background-color: transparent;
+  box-shadow: none;
+  border: none;
+  padding-left: 0;
+  /* position: sticky; */
+  float: left;
+  top: 9vh;
+}
+
+.fixed {
+  position: fixed;
+  width: auto;
+  height: auto;
+}
+
+.mode-down {
+  top: 183px;
+}
+
+ol {
+  list-style: none;
+  counter-reset: my-awesom e-counter;
+  padding: 0;
+}
+ol li {
+  counter-increment: my-awesome-counter;
+}
+ol li:active {
+  background-color:  #d1d1d1;
+}
+
+ol li:hover {
+  cursor: pointer;
+  background-color:  #dddddd;
+}
+
+.active {
+  background-color:  #d1d1d1;
+}
+
+ol li::before {
+  content: counter(my-awesome-counter) ". ";
+  color: white;
+  border-radius: 2rem;
+  background: #255e69;
+  font-weight: bold;
+  padding: 0.4rem 0;
+  padding-left: 0.6rem;
+  padding-right: 0.3rem;
+  margin-right: 0.5rem;
 }
