--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.css
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.css
@@ -27,3 +27,8 @@
 .spinner {
     display: inline-block;
 }
+
+.info-mat-card {
+    border-left: 3px solid #4e824e;
+    background-color: #d2ead2;
+}
