Monoalph. c. : Added spinner while again calc data
Added info and action panel for MonoAlph. c.

--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.css
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.css
@@ -32,3 +32,7 @@
     border-left: 3px solid #4e824e;
     background-color: #d2ead2;
 }
+
+.action-mat-card {
+    border-left: 3px solid #ab4439;
+}
