--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -20,20 +20,23 @@
         <div class="row">
           <mat-card id="inputs" class="col-md-12">
             <mat-card-header>
-              <mat-card-title>Key for encryption</mat-card-title>
+              <mat-card-title
+                >Generate random key for encryption</mat-card-title
+              >
             </mat-card-header>
             <mat-card-content style="word-wrap: break-word;">
               {{ rndKey }}
-
-              <button mat-button (click)="shuffleRndKey()">
-                Generate key
-              </button>
             </mat-card-content>
+            <mat-card-actions>
+              <button mat-button (click)="shuffleRndKey()">
+                Generate
+              </button>
+            </mat-card-actions>
           </mat-card>
         </div>
         <br />
         <div class="row">
-          <mat-card class="col-md-12">
+          <mat-card class="col-md-12 action-mat-card">
             <mat-card-header>
               <mat-card-title>Message</mat-card-title>
             </mat-card-header>
@@ -75,8 +78,8 @@
                   </mat-error>
                 </mat-form-field>
                 <div>
-                  <button mat-button (click)="calcDataForPage()">
-                    Analyse
+                  <button mat-button (click)="encryptEndDecryptMessage()">
+                    Encrypt and Decrypt Message
                   </button>
                 </div>
               </form>
@@ -119,7 +122,7 @@
     <div class="row">
       <mat-card class="info-mat-card col-md-12">
         <mat-card-header>
-          <mat-card-title>Find decryption key</mat-card-title>
+          <mat-card-title>Find decryption key with Hill Climbing alghorithm</mat-card-title>
         </mat-card-header>
         <mat-card-content style="word-wrap: break-word;">
           To find key we will be repeat next steps:
@@ -144,16 +147,44 @@
 
     <br />
     <div class="row">
-      <mat-card class="col-md-12">
+      <mat-card class="col-md-12 action-mat-card">
         <mat-card-header>
           <mat-card-title>Generated random key</mat-card-title>
         </mat-card-header>
         <mat-card-content style="word-wrap: break-word;">
-          For finding key we use Hill Climbing alghorithm.
+          We generate random key for Hill Climbing
 
           <h5>We generate random key {{ rndKey }}</h5>
           <h5>We try to find key {{ keys.decKey }}</h5>
+
+          <form [formGroup]="cipherAttemptForm">
+            <mat-form-field>
+              <input
+                matInput
+                type="number"
+                placeholder="Set number of attempts"
+                name="attemptInput"
+                formControlName="numberOfAttempt"
+                min="1"
+                max="10"
+              />
+              <mat-hint>Please, enter number from 1 to 10. </mat-hint>
+              <mat-error
+                *ngIf="
+                cipherAttemptForm.get('numberOfAttempt').hasError('max') ||
+                cipherAttemptForm.get('numberOfAttempt').hasError('min')
+                "
+              >
+              Please, enter number from 1 to 10.
+              </mat-error>
+            </mat-form-field>
+          </form>
         </mat-card-content>
+        <mat-card-actions>
+          <button mat-button (click)="calcDataForPage()">
+            Guess Key
+          </button>
+        </mat-card-actions>
       </mat-card>
     </div>
 
@@ -187,7 +218,7 @@
       </div>
     </div>
   </div>
-  <div class="container" id="compareBigrams">
+  <div  [ngClass]="{ hide: !calcDone, show: calcDone }" class="container" id="compareBigrams">
     <div class="row">
       <div class="col-md-12 col-xs-12">
         <mat-card>
