added padding between columns in Table Component

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,4 +1,12 @@
 .full-width {
-    display: block;
-    overflow-x: auto;
+  display: block;
+  overflow-x: auto;
+}
+
+.mat-row {
+  height: auto;
+}
+
+.mat-cell {
+  padding: 8px 8px 8px 0;
 }
