Added Table of better keys in Monoalph. c.

--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -20,9 +20,7 @@
         <div class="row">
           <mat-card id="inputs" class="col-md-12 action-mat-card">
             <mat-card-header>
-              <mat-card-title
-                >Generate random key for encryption</mat-card-title
-              >
+              <mat-card-title>Generate random key for encryption</mat-card-title>
             </mat-card-header>
             <mat-card-content style="word-wrap: break-word;">
               {{ rndKey }}
@@ -43,37 +41,23 @@
             <mat-card-content style="word-wrap: break-word;">
               <form [formGroup]="cipherInputsForm">
                 <mat-form-field style="width:50vw">
-                  <textarea
-                    matInput
-                    cdkTextareaAutosize
-                    #autosize="cdkTextareaAutosize"
-                    cdkAutosizeMinRows="2"
-                    cdkAutosizeMaxRows="9"
-                    placeholder="Type message to encrypt"
-                    name="messageInput"
-                    formControlName="message"
-                  ></textarea>
-                  <mat-hint
-                    >Please, enter message longer than 20 letters and text must
+                  <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2"
+                    cdkAutosizeMaxRows="9" placeholder="Type message to encrypt" name="messageInput"
+                    formControlName="message"></textarea>
+                  <mat-hint>Please, enter message longer than 20 letters and text must
                     include letters a-z or A-Z.
                   </mat-hint>
-                  <mat-error
-                    *ngIf="
+                  <mat-error *ngIf="
                       cipherInputsForm.get('message').hasError('minlength')
-                    "
-                  >
+                    ">
                     Please, enter message longer than 20 letters.
                   </mat-error>
-                  <mat-error
-                    *ngIf="
+                  <mat-error *ngIf="
                       cipherInputsForm.get('message').hasError('maxlength')
-                    "
-                  >
+                    ">
                     Please, enter message shorter than 2000 letters.
                   </mat-error>
-                  <mat-error
-                    *ngIf="cipherInputsForm.get('message').hasError('pattern')"
-                  >
+                  <mat-error *ngIf="cipherInputsForm.get('message').hasError('pattern')">
                     Please, text must include letters a-z or A-Z.
                   </mat-error>
                 </mat-form-field>
@@ -159,23 +143,14 @@
 
           <form [formGroup]="cipherAttemptForm">
             <mat-form-field>
-              <input
-                matInput
-                type="number"
-                placeholder="Set number of attempts"
-                name="attemptInput"
-                formControlName="numberOfAttempt"
-                min="1"
-                max="10"
-              />
+              <input matInput type="number" placeholder="Set number of attempts" name="attemptInput"
+                formControlName="numberOfAttempt" min="1" max="10" />
               <mat-hint>Please, enter number from 1 to 10. </mat-hint>
-              <mat-error
-                *ngIf="
-                cipherAttemptForm.get('numberOfAttempt').hasError('max') ||
-                cipherAttemptForm.get('numberOfAttempt').hasError('min')
-                "
-              >
-              Please, enter number from 1 to 10.
+              <mat-error *ngIf="
+                  cipherAttemptForm.get('numberOfAttempt').hasError('max') ||
+                  cipherAttemptForm.get('numberOfAttempt').hasError('min')
+                ">
+                Please, enter number from 1 to 10.
               </mat-error>
             </mat-form-field>
           </form>
@@ -248,17 +223,27 @@
       </div>
     </div>
   </div> -->
-
-  <div  [ngClass]="{ hide: !calcDone, show: calcDone }" class="container"  id="compareBigrams">
+  <div [ngClass]="{ hide: !calcDone, show: calcDone }" class="container" >
     <div class="row">
       <div class="col-md-12 col-xs-12">
         <mat-card>
           <mat-card-content>
-            <app-graph
-              #iterScoreGraph
-              [chartOptionsFreqGraph]="chartOptionsIterScoreGraph"
-              [data]="dataSourceiterScoreGraph"
-            ></app-graph>
+            <app-table [columnNames]="columnsBestResults" [dataSource]="dataSourceBestResults"
+              [defaultSort]="sortBestResults" [ready]="dataSourceBestResultsReady">
+            </app-table>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div [ngClass]="{ hide: !calcDone, show: calcDone }" class="container" id="compareBigrams">
+    <div class="row">
+      <div class="col-md-12 col-xs-12">
+        <mat-card>
+          <mat-card-content>
+            <app-graph #iterScoreGraph [chartOptionsFreqGraph]="chartOptionsIterScoreGraph"
+              [data]="dataSourceiterScoreGraph"></app-graph>
           </mat-card-content>
         </mat-card>
       </div>
@@ -267,10 +252,7 @@
 
   <div class="container">
     <div class="row">
-      <mat-card
-        class="text-center col-md-12"
-        [ngClass]="{ hide: calcDone, show: !calcDone }"
-      >
+      <mat-card class="text-center col-md-12" [ngClass]="{ hide: calcDone, show: !calcDone }">
         <mat-card-content>
           <h5>Please wait, after calculation ends</h5>
           <br />
