Added option to table: set to not full width

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 full-width mat-elevation-z8">
+<div class="col-md-12" [ngClass]="fullWidth?'full-width mat-elevation-z8':''" >
 
 <table mat-table #sort="matSort" [dataSource]="dataSource" matSort [matSortActive]="defaultSort.sortByColumn" [matSortDirection]="defaultSort.order"
     class="">
